--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
-background-color: #white;
 font-family: 'Open Sans', sans-serif;
-color: #2d2d2d;
 font-size: 10px;
 line-height: 1,3;
 letter-spacing: 3px;
@@ -14,12 +12,12 @@ font-size: 20px;
 }
 
 
-.img {
+/*.img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   margin: 0;
-}
+}*/
 
 .card {
  background: white;
